--- a/src/css/base.css
+++ b/src/css/base.css
@@ -7,7 +7,8 @@
   font-weight: 400;
 
   color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  background-color: #fafafa;
+  /* background-color: rgba(255, 255, 255, 0.87); */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,8 +20,8 @@
 body {
   display: flex;
   flex-direction: column;
-  min-width: 100vw;
-  min-height: 100vh;
+  /* min-width: 100vw;
+  min-height: 100vh; */
   margin: 0;
 }
 
@@ -29,4 +30,41 @@ main {
 }
 main:has(.back-link) {
   text-align: center;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  min-width: 320px;
+  padding-top: 80px;
+}
+
+.nav-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ff4e4e;
+  border-radius: 8px;
+  padding: 8px 16px;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.04em;
+  color: #fff;
+  transition: background-color 250ms ease;
+  width: 120px;
+  height: 40px;
+}
+
+.nav-item:hover,
+.nav-item:focus {
+  background-color: #ff7070;
+}
+
+.nav-logo {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
