--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,9 +7,11 @@
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
-@import url('./container.css');
+/* @import url('./container.css'); */
 @import url('./animations.css');
-
+  
 /* Sections style */
-@import url('./header.css');
+/* @import url('./header.css'); */
 @import url('./back-link.css');
+@import url('./gallery.css');
+@import url('./form.css');
